search stuck issue + padding for serp bar

--- a/src/components/OverlayManager/Search/scss/index.scss
+++ b/src/components/OverlayManager/Search/scss/index.scss
@@ -202,7 +202,7 @@ $drawer-width: 25rem;
       &:last-child
       {
         padding-bottom: 0;
-        margin-bottom: 80px;
+        margin-bottom: 160px;
       }
 
       a
